<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/c0d9726e35d3447328f4d472fa760732"
        android:contentDescription="@string/background_pic" />

    <Button
        android:id="@+id/generateButton"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/resultTextView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-23dp"
        android:layout_marginEnd="227dp"
        android:layout_marginBottom="552dp"
        android:text="@string/generate_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_above="@+id/generateButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="281dp"
        android:layout_marginBottom="28dp"
        android:text="@string/age_enter_text"
        android:textColor="#E8DFDF"
        android:textColorHighlight="#EFE5E5"
        android:textColorHint="#EFE7E7"
        android:textColorLink="#E1DADA"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="267dp"
        app:srcCompat="@drawable/download"
        android:contentDescription="@string/foreground_pic" />

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_above="@+id/generateButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="137dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/hint"
        android:text="" />

    <EditText
        android:id="@+id/resultTextView"
        android:layout_width="324dp"
        android:layout_height="122dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="290dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:inputType="text"
        android:lines="5"
        android:maxLines="5"
        android:singleLine="false"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FBFBFB"
        android:textColorHint="#FFFCFC"
        android:hint="@string/output_text"
        android:textSize="13sp"
        android:text=""
        android:textStyle="bold"
        android:autofillHints="" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/generateButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="169dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="552dp"
        android:text="@string/clear_button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="77dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="679dp"
        android:shadowColor="#000000"
        android:shadowDx="6"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/title"
        android:textColor="#8D57E6"
        android:textColorHint="#AF3636"
        android:textSize="34sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

</RelativeLayout>
